--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -29,3 +29,19 @@ footer a {
 .product_details_description {
   font-size: 13px;
 }
+
+/*  */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.97);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+.animate-fadeIn {
+  animation: fadeIn 0.25s ease-in-out;
+}
