Added some classes for each layout component to improve styling and structure.

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -8,7 +8,7 @@ html {
 
 /* Announcement Section */
 
-.announcement {
+.announcement_section {
   font-size: 13px;
   font-weight: 500;
   text-transform: uppercase;
